--- a/index.html
+++ b/index.html
@@ -1,33 +1,19 @@
-<style>
-*{color:#4B7AD4;font-family:arial}
-body{background-image:-webkit-linear-gradient(#333 50%,#222 50%);background-size: 50px;}
-p{display:block;opacity:0;-webkit-transform:rotateZ(90deg);position:absolute;top:100px;left:1000px;font-size:900%;}
-div{position:absolute;top:0;left:0;height:100%;width:100%;background:#000;color:#fff;opacity:0;-webkit-transition:3s;line-height:100%;text-align:center}
-div.s{opacity:1}
+<style>*{color:#4B7AD4;font-family:arial}body{background-image:-webkit-linear-gradient(#333 50%,#222 50%);background-size: 30px;}
+p{display:block;opacity:0;position:absolute;left:1800px;font-size:900%;}div{position:absolute;height:100%;width:100%;background:#000;color:#fff;opacity:0;-webkit-transition:3s;text-align:center;font-size:900%; padding:400px 0}div.s{opacity:1}
 @-webkit-keyframes a{
-from{-webkit-transform:rotateZ(90deg);opacity:0}
+from{-webkit-transform:rotateZ(180deg)}
 15%{-webkit-transform:rotateZ(0deg);opacity:1}
-25%{top:100px}
-30%{color:#4B7AD4; left:900px}
-40%{color:#5763F6}
+30%{color:#4B7AD4;left:700px}
 50%{color:#5EB4EB}
-60%{color:#5763F6}
-70%{color:#4B7AD4; left:600px}
-75%{top:200px}
+70%{color:#4B7AD4;left:300px}
 85%{opacity:1}
-to{-webkit-transform:rotateZ(10deg);opacity:0;left:-200px}}
+to{-webkit-transform:rotateZ(10deg);left:-200px}}
 </style>
-<body><div id="z">That's all folks!</div><script>i=0;d=document
-"Hi DemoJS partiers and orga! Thx 4 being awesome! CSS rulez! 1k is not much and yet enough. \\o/".split(" ").map(function(e){
-a=d.createElement("p")
-a.style.webkitAnimation="a 2s "+(i++)+"s 1"
-a.innerHTML=e
-a.addEventListener("webkitAnimationEnd",function(){if(!--i){
-z.className='s'
-}})
-return a
-}).forEach(function(e){
-d.body.appendChild(e)
-})
-
-</script> 
+<body><div id="z">That's all folks!</div><script>i=0;d=document;
+"Hi DemoJS partiers and orga! Thx 4 being awesome! CSS rulez! 1k is not much and yet enough. \\o/".split(" ").forEach(function(e){
+a=d.createElement("p");
+a.style.webkitAnimation="a 2s "+(i++)+"s 1";
+a.innerHTML=e;
+a.addEventListener("webkitAnimationEnd",function(){if(!--i)z.className='s'})
+d.body.appendChild(a);
+})</script> 
